Challenge 1 Test 5 Passing

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 			 
 		}
       // 🧠 Implement a `pop` method which removes the last integer from `ints`  and returns it
+		pop () {
+			return this.ints.pop()
+		}
       // 🧠 Implement a `push` method which takes an int and pushes it to the end of `ints`, and returns the updated `ints` property
       // 🧠 Implement a `getEveryNth` method which takes an int `n` and returns an array with the ints at position 0, n, n + n, n + n + n, etc
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
