Challenge 1 Test 6 Passing

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 			return this.ints.pop()
 		}
       // 🧠 Implement a `push` method which takes an int and pushes it to the end of `ints`, and returns the updated `ints` property
+		push ( int ) {
+			this.ints.push( int )
+			return this.ints
+			
+		}
       // 🧠 Implement a `getEveryNth` method which takes an int `n` and returns an array with the ints at position 0, n, n + n, n + n + n, etc
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
