--- a/index.html
+++ b/index.html
@@ -196,10 +196,22 @@
     // 👉 CHALLENGE 4 AntFarm
     class AntFarm {
       // 🧠 Constructor takes **any** number of arguments, which are strings: the names of your ants
-      // 🧠 Instances of AntFarm have an `ants` property holding an array of ants:
-      //      * Each ant is an object with a `name` prop and a `health` prop that starts at 100
+		constructor (...antNames) {
+			this.names = antNames
+			// 🧠 Instances of AntFarm have an `ants` property holding an array of ants:
+			this.ants = []
+			//      * Each ant is an object with a `name` prop and a `health` prop that starts at 100
+			this.names.forEach ( ( ant ) => this.ants.push ( { name: ant, health: 100 } ) )
+			
+		}
+
       // 🧠 Instances of AntFarm have a `work` method:
-      //      * When invoked your ants do chores at a cost of 20 health points each
+		work () {
+			//      * When invoked your ants do chores at a cost of 20 health points each
+			this.ants.forEach ( ant => ant.health -= 20 )
+
+		}
+      
       //      * The method takes no arguments and returns the string "<ant number> ants starting work!"
       //      * If the `health` of any ant decreases to zero or below, it dies and is removed from `ants`
       //      * If `ants` contains no ants, the method returns "No ants here. Did you work them to death?"
@@ -227,6 +239,9 @@
       //      and with the piece of mind of all tests passing, refactor to use map/filter
 
     }
+
+	 let test = new AntFarm ( 'Thomas', 'Jess', 'Justin', 'Katy' )
+	 
 
     // 🧪 TESTS, do not make any changes below this line ===================
     // 🧪 TESTS, do not make any changes below this line ===================
